Android项目修改源代码主包名

--- a/lavsource-bilibili-android/app/src/main/res/layout/activity_main.xml
+++ b/lavsource-bilibili-android/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     tools:ignore="HardcodedText"
-    tools:context="de.honoka.lavender.lavsource.ui.MainActivity">
+    tools:context="de.honoka.lavender.lavsource.android.ui.MainActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
