--- a/lavsource-bilibili-android/app/src/main/res/layout/activity_web.xml
+++ b/lavsource-bilibili-android/app/src/main/res/layout/activity_web.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="de.honoka.lavender.lavsource.ui.WebActivity"
+    tools:context="de.honoka.lavender.lavsource.android.ui.WebActivity"
     tools:ignore="HardcodedText">
 
     <WebView
